# Incremental-Affix

./: .gitignore  Cargo.toml
incremental_affix/: Cargo.toml
incremental_affix/src/: Readme.md  item.rs  main.rs  stats_builder.rs  ui.rs
incremental_affix/src/engine/: drop_table.rs  item.rs  item_slot.rs  mod.rs
incremental_affix/src/game/: item.rs  mod.rs  modifiers.rs  player.rs
incremental_affix/src/incremental/: action.rs  actions.rs  affinity.rs  critical.rs  mod.rs  screens.rs  stats.rs  stock.rs
incremental_affix/src/incremental/action/: change.rs  spc.rs
incremental_affix/src/incremental/item/: affixive_item.rs  base.rs  bases.rs  equipment.rs  item_database.rs  item_slot.rs  mod.rs  modifier.rs
incremental_affix/src/incremental/job/: mod.rs  spc.rs
incremental_affix/src/incremental/stock/: mod.rs  producer_consumer.rs  stockyard.rs
incremental_affix/src/incremental/ui/: item.rs  log.rs  mod.rs  resouces.rs  stocks.rs
incremental_affix/src/incremental/ui/screen/: action.rs  craft.rs  inventory.rs  mod.rs
incremental_affix/src/ui/: item.rs  log.rs  mod.rs  stocks.rs  tooltip.rs
incremental_affix/src/ui/screen/: action.rs  craft.rs  inventory.rs  mod.rs  population.rs
