[package]
name = "incremental_affix"
version = "0.1.0"
edition = "2024"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anymap = "0.12.1"
bevy = { version = "0.17", features = ["experimental_bevy_ui_widgets"] }
rand = "0.8.5"